# pg_ulid

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Changes  Dockerfile  LICENSE  META.json  Makefile  Makefile.lint  README.md  pg_ulid--0.1.0.sql  pg_ulid.control  test.sh
.github/workflows/: ci.yml
doc/: ulid.md
src/: ulid.c  ulid.h
test/expected/: 01_basic.out  02_operators.out  03_indexing.out  04_binary_io.out  05_validation.out  06_scale.out  ulid.out
test/sql/: 01_basic.sql  02_operators.sql  03_indexing.sql  04_binary_io.sql  05_validation.sql  06_scale.sql  ulid.sql
